Added Drupal 10 version.

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <div class="info">
             <h4><span>Nombre:</span> Daniel Pineda</h4>
             <h4><span>Provincia:</span> Sevilla</h4>
-            <h4><span>Especialidad actual:</span> Programación en Drupal 8/9 con PHP</h4>
+            <h4><span>Especialidad actual:</span> Programación en Drupal 8/9/10 con PHP</h4>
             <h4><span>Lenguajes aprendidos:</span> CSS | JavaScript | Java | C | Angular</h4>
             <h4><span>Herramientas usadas:</span> Composer | Jenkins | GitHub Actions | Docker | MySQL | Make | Git | GitHub | Bitbucket | Azure</h4>
             <h4><span>Idiomas:</span> Español | Inglés</h4>
@@ -153,12 +153,12 @@
                 <i class="fa fa-building"></i>
                 <span class="dates">Jul. 2021 - Actualidad</span>
                 <h4>The Cocktail Experience</h4>
-                <p>Desarrollo back-end en la creación de páginas webs con el CMS Drupal en versiones 8 y 9 para proyectos nacionales e internacionales..</p>
+                <p>Desarrollo back-end en la creación de páginas webs con el CMS Drupal en versiones 8, 9 y 10 para proyectos nacionales e internacionales.</p>
             </div>
     
             <div class="box">
                 <i class="fa fa-building"></i>
-                <span class="dates">Sep. 2017 - Jul. 2021 <b>(3 años 11 meses)</b></span>
+                <span class="dates">Sep. 2017 - Jul. 2021 <b>(3 años 10 meses)</b></span>
                 <h4>La Drupalera by Emergya</h4>
                 <p>Desarrollo back-end en la creación de páginas webs con el CMS Drupal en versiones 7, 8 y 9 para proyectos nacionales e internacionales.</p>
             </div>
