Changed text of home section.

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <h3>HELLO THERE!</h3>
         <h4 class="visually-hidden">Soy Daniel Pineda</h4>
         <p>
-            Apasionado por la tecnología y la programación. Más de cinco años de experiencia desarrollando webs en Drupal 7, 8 y 9 con programación en PHP.
+            Apasionado por la tecnología y la programación. Más de cinco años de experiencia desarrollando webs en Drupal 7, 8, 9 y 10 con programación en PHP.
         </p>
         <a href="#about" class="btn">Sobre mí <i class="fa fa-user"></i></a>
 
