--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <h3>HELLO THERE!</h3>
         <h4 class="visually-hidden">Soy Daniel Pineda</h4>
         <p>
-            Apasionado por la tecnología y la programación. Más de cinco años de experiencia desarrollando webs en Drupal 7, 8, 9 y 10 con programación en PHP.
+            Apasionado por la tecnología y la programación. Más de seis años de experiencia desarrollando webs en Drupal 7, 8, 9 y 10 con programación en PHP.
         </p>
         <a href="#about" class="btn">Sobre mí <i class="fa fa-user"></i></a>
 
@@ -114,22 +114,22 @@
         <div class="counter">
 
             <div class="box">
-                <span>5+</span>
+                <span>+10</span>
                 <h4>Créditos en issues de la comunidad</h4>
             </div>
 
             <div class="box">
-                <span>2</span>
+                <span>3</span>
                 <h4>Asistencias a DrupalCamp Spain</h4>
             </div>
 
             <div class="box">
-                <span>20+</span>
+                <span>+20</span>
                 <h4>Proyectos en los que trabajé</h4>
             </div>
 
             <div class="box">
-                <span>5+</span>
+                <span>+6</span>
                 <h4>Años de experiencia</h4>
             </div>
 
